--- a/app/views/businessprofiles/_form.html.erb
+++ b/app/views/businessprofiles/_form.html.erb
@@ -27,7 +27,12 @@
   <div class="form-group">
   <%= f.text_area :bio, class: "form-control", :rows => 10, placeholder: "Tell the world about your brewery!" %>
   </div>
-  
+
+  <div class="field form-group">
+    <%= f.label "Photo" %><br>
+    <%= f.file_field :avatar %>
+  </div>
+
   <div class="form-group">
   <%= f.text_field :motto, class: "form-control", placeholder: "Tagline Time!" %>
   </div>
@@ -43,7 +48,7 @@
     <%= f.label :business_user_id %><br>
     <%= f.text_field :business_user_id, value: current_business_user.id %>
   </div>
-  
+
   <div class="actions">
     <%= f.submit %>
   </div>
