--- a/app/views/businessprofiles/index.html.erb
+++ b/app/views/businessprofiles/index.html.erb
@@ -28,10 +28,10 @@
 
 
   <div class="col-md-9">
-  <div class="head">  
+  <div class="head">
   <h1><b><center>Business Feed</center></b></h1>
   </div>
-  
+
   <div class="panel panel-success">
     <% @businessprofile.each do |x| %>
   <div class="panel-heading">
@@ -39,6 +39,7 @@
   </div>
 
 <div class="panel-body">
+  <%= image_tag @businessprofile.avatar.url(:thumb), class: "img-responsive" %>
     <p><%= x.motto %></p>
 <% if user_signed_in? %>
     <p>Miles from you: <%= x.distance_to(current_user).round(1) %></p>
@@ -46,7 +47,7 @@
 </div>
 <% end %>
 </div>
-  
+
 
   <div class="col-md-2">
   <%= search_form_for @q do |f| %>
@@ -56,7 +57,7 @@
 <%= f.submit %>
 
       <% end %>
-      
+
 <%= button_tag type: 'button' do %>
 <% link_to 'Clear', businessprofiles_path %>
 <% end %>
@@ -75,9 +76,3 @@
 </div>
 </div>
 </div>
-
-
-
-
-
-
