--- a/app/views/businessprofiles/show.html.erb
+++ b/app/views/businessprofiles/show.html.erb
@@ -20,8 +20,9 @@
 
   <div class="col-xs-6 col-md-6">
     <a href="#" class="thumbnail">
-      <h4><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> <%= @b_profile.address %></h4><br />
-      <h4><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> <%= @b_profile.phone_number %></h4><br />
+      <right><%= image_tag @b_profile.avatar.url(:medium), class: "img-responsive" %></right>
+      <right><h4><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> <%= @b_profile.address %></h4>
+      <h4><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> <%= @b_profile.phone_number %></h4></right>
     </a>
 
  </div>
