--- a/app/views/businessprofiles/show.html.erb
+++ b/app/views/businessprofiles/show.html.erb
@@ -21,7 +21,7 @@
   <div class="col-xs-6 col-md-6">
     <a href="#" class="thumbnail">
     <h4><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> <%= @b_profile.address %></h4><br />
-      <h4><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> <%= @b_profile.phone_number %></h4><br />
+      <h4><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> <%= @b_profile.phone_number %></h4><br/>
     </a>
 
  </div>
@@ -31,16 +31,11 @@
    <div class="col-xs-6 col-md-6">
      <div class="thumbnail">
      <center><h3> What we're slinging right now:</h3></center>
-     <% @b_profile.taps.each do |tap| %><br />
-     <ul>
-       <li>
-     <%= tap.drink.name  %>
-   </li>
- </ul>
+     <% @beer.each do |tap| %><br />
+     <%= tap  %>
       <% end %>
     </div>
     </div>
-
       <div class="col-xs-6 col-md-6">
         <div id="map-canvas"></div>
       </div>
